--- a/Site-Verification-Form/package.json
+++ b/Site-Verification-Form/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "leaflet": "^1.9.4",
     "tailwindcss": "^4.0.15",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
