--- a/Site-Verification-Form/package.json
+++ b/Site-Verification-Form/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@tailwindcss/vite": "^4.0.15",
     "leaflet": "^1.9.4",
     "tailwindcss": "^4.0.15",
